# kde-dolphin-snapshots-pane

./: .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Messages.sh  README.md  SECURITY.md  kde-dolphin-snapshots-pane.json
.github/workflows/: ci.yml  codeql.yml
po/: README.md  de.po  en_US.po  kde-dolphin-snapshots-pane.pot  template.pot
po/de/: kde-dolphin-snapshots-pane.po
src/: SnapshotFinder.cpp  SnapshotFinder.h  SnapshotsPane.cpp  SnapshotsPane.h  SnapshotsPanePlugin.cpp  SnapshotsPanePlugin.h
tests/: CMakeLists.txt  LocalizationTest.cpp  README.md  SnapshotDiscoveryTest.cpp  SnapshotFinderTest.cpp  validate_tests.sh
